# serial_flash_programmer_C2000

./: .gitignore  README.md  contents.txt  serial_flash_programmer.sln  serial_flash_programmer_01_04_00_00_manifest.html
f28004x_fw_upgrade_example/: flashapi_ex2_sci_kernel_my.txt  launchxl_ex1_f280049c_demo.txt
launchxl-f28069m_upgrade_example/: Example_2806xLaunchPad.txt  f28069_sci_flash_kernel.txt  note.txt  serial_flash_programmer
serial_flash_programmer/: .gitignore  CMakeLists.txt  linux_macros.h  readme.txt  serial_flash_programmer.cpp  serial_flash_programmer.vcxproj  stdafx.h
serial_flash_programmer/include/: f021_DownloadImage.h
serial_flash_programmer/source/: f021_DownloadImage.cpp  f021_DownloadKernel.cpp  f021_SendMessage.cpp  f05_DownloadImage.cpp
